# Mindscape.ai

./: .gitignore  README.md  vercel.json
backend/: main.py  pyproject.toml  requirements.txt
backend/app/api/: routes.py
backend/app/config/: therapist_config.py
backend/app/services/: ai_chat.py
therapy-chat/: middleware.ts  next-intl.config.ts  package-lock.json  package.json  pnpm-lock.yaml
therapy-chat/app/: globals.css  page.tsx
therapy-chat/app/[locale]/: layout.tsx  not-found.tsx  page.tsx
therapy-chat/components/: LanguageSwitcher.tsx
therapy-chat/components/chat/: ChatInterface.tsx  TherapistSelector.tsx
therapy-chat/i18n/: config.ts  request.ts
therapy-chat/messages/: en.json  zh.json
