[tool.poetry]
name = "mindscape"
version = "0.1.0"
description = "AI-powered therapy chat application"
authors = ["lewislovelock <lewisjianjian@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
python-dotenv = "^1.0.0"
google-generativeai = "^0.3.0"
mistralai = "^0.0.12"
websockets = "^12.0"
pydantic = "^2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
